--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.1
-	yarn_mappings=1.18.1+build.7
-	loader_version=0.12.12
+	minecraft_version=1.19
+	yarn_mappings=1.19+build.4
+	loader_version=0.14.8
+
+	#Fabric api
+	fabric_version=0.56.3+1.19
 
 # Mod Properties
 	mod_version = 1.1.0
 	maven_group = com.yhord.lightly.colored.sea.lanterns
 	archives_base_name = lightly-colored-sea-lanterns
-
-# Dependencies
-	fabric_version=0.44.0+1.18
